# Seeed-Xiao-nRF54L15

./: .gitignore  .gitmodules  FLPR_HPF_Development_info.md  README.MD  Seeed-Xiao-nRF54L15.code-workspace  board_config_template.overlay  nRF54L15.code-workspace  nrf54l_training_text.txt
HPF-mspi/: prj.conf
HPF-mspi/build_xiao/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  HPF-mspi_sysbuild_cache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  vpr_launcher_sysbuild_cache.txt
Not_working/sdcard/: CMakeLists.txt
adc/: CMakeLists.txt  README.md  prj.conf
adc/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
adc/build_xiao/: .ninja_log  CMakeCache.txt  adc_sysbuild_cache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  zephyr-adc-ncs_sysbuild_cache.txt
adc/src/: main.c
applications/blink_uart/: README.md  sample.yaml
bap_broadcast_sink/: README.md
bap_broadcast_sink/boards/: nrf52840dongle_nrf52840.conf
bap_broadcast_sink_BACKUP_20251023_114150/: prj.conf
bap_broadcast_sink_BACKUP_20251023_114150/boards/: nrf52840dongle_nrf52840.conf
bap_broadcast_sink_BACKUP_20251023_114150/src/: main.c
bap_broadcast_source/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
bap_broadcast_source/src/: main.c  main.c.BACKUP_WITH_DMIC_20251023_121628
bap_dmic/: CMakeLists.txt  README.md  prj.conf
bap_dmic/boards/: xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
bap_dmic/src/: main.c
battery/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
battery/build_xiao/: .ninja_log  CMakeCache.txt  build.ninja  merged.hex  (+4 more)
ble/: README.md  prj.conf  sample.yaml
ble_button/: README.md  prj.conf
ble_modern/: CMakeLists.txt
blink_uart/: CMakeLists.txt  README.md  prj.conf
bluepad32_zephyr/: CMakeLists.txt  CREATION_SUMMARY.md  Kconfig  QUICKSTART.md  STATUS.md  copilot-instructions.md  sample.yaml
bluepad32_zephyr/src/bluetooth/: bt_gatt_client.c
bluepad32_zephyr/src/controller/: uni_controller.c  uni_gamepad.c
bluepad32_zephyr/src/parser/: uni_hid_parser_generic.c  uni_hid_parser_keyboard.c  uni_hid_parser_switch.c
bluepad32_zephyr/src/platform/: uni_platform_zephyr.c
button/: README.md  sample.yaml
capacitive_touch/: CMakeLists.txt  README.md  prj.conf  sample.yaml
comp_touch_test/: CMakeLists.txt  prj.conf
dmic/: CMakeLists.txt  sample.yaml
dmic-recorder/: sample.yaml
dmic_ble/: README.md
dmic_easydma/: CMakeLists.txt  EASYDMA_NOTES.md  README.md  VERIFICATION.md  prj.conf
docs/: agents_bluepad32_porting.md  app.overlay_template.md  forum-post-channel-sounding-xiao.md  nRF52840_MODE_SWITCHING_GUIDE.md  nrf54l15-guide-compressed.md  nrf54l15-guide-full.md
epaper/: CMakeLists.txt  README.md  sample.yaml
flpr_ipc_test/: CMakeLists.txt  Kconfig.sysbuild  README.md  prj.conf  sysbuild.cmake  sysbuild.conf
gabriel/: CMakeLists.txt  prj.conf  sample.yaml
gps/: sample.yaml
hci_uart/: prj.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
hpf_blinky_test/: app.overlay  prj.conf
imu/: CMakeLists.txt  sample.yaml
led_matrix/: Kconfig  README.md
led_strip_single/: ANIMATION_REFERENCE.md  CMakeLists.txt
lowpower/: CMakeLists.txt  README.md
nrf54l15_test/: CMakeLists.txt  README.md  prj.conf
pwm/: CMakeLists.txt  prj.conf
pwm_rgb/: CMakeLists.txt  README.md  prj.conf  sample.yaml
sdcard/: README.rst  prj.conf
watchface/: CMakeLists.txt  New Text Document.txt  prj.conf
whisper/: CMakeLists.txt  README.md  audio_capture_transcribe.cpp  build.ps1  list_audio_devices.cpp  setup.ps1  transcribe.py
xiao_expanded/audio_visualizer/: CMakeLists.txt  prj.conf  readme.md
xiao_expanded/audio_visualizer/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
xiao_expanded/audio_visualizer/src/: main.c
zephyr-adc-ncs/: README.md  prj.conf  sample.yaml
zephyr-battery-ncs/: CMakeLists.txt  README.md  sample.yaml
zephyr-blink-ncs/: README.md
zephyr-button-ncs/: CMakeLists.txt
zephyr-dmic-recorder/: README.md  platformio.ini
zephyr-dmic-recorder-ncs/: CMakeLists.txt  README.md
zephyr-expansion-base-for-xiao/attitude_monitor-ncs/: CMakeLists.txt  readme.md
zephyr-expansion-base-for-xiao/attitude_monitor-ncs/boards/: app.overlay
zephyr-gpio-ncs/: README.md  sample.yaml
zephyr-gps-ncs/: CMakeLists.txt  README.md
zephyr-imu-ncs/: README.md
zephyr-lowpower-ncs/: prj.conf  sample.yaml
zephyr-pwm-ncs/: README.md  sample.yaml
(+5654 files in other folders)
